--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,8 @@
 FRONTEND_URL = 
 PORT = 2302
 
-MONGO_URL = mongodb+srv://khoanguyen1881:YFHjzgLGbhYL4ZdI@cluster0.l8aa8.mongodb.net/product-management
+MONGO_URL = mongodb+srv://khoanguyen1881:YFHjzgLGbhYL4ZdI@cluster0.l8aa8.mongodb.net/chat-app
+
+
+
+# product-management
