--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,7 @@ PORT = 2302
 
 MONGO_URL = mongodb+srv://khoanguyen1881:YFHjzgLGbhYL4ZdI@cluster0.l8aa8.mongodb.net/chat-app
 
+JWT_SECREAT_KEY = "khoadanghoclaptrinhweb"
 
 
 # product-management
