taoj cacs folder va tao routes

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-FRONTEND_URL = 
+FRONTEND_URL = http://localhost:5173
 PORT = 2302
 
 MONGO_URL = mongodb+srv://khoanguyen1881:YFHjzgLGbhYL4ZdI@cluster0.l8aa8.mongodb.net/chat-app
