--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "antd": "^5.23.4",
+    "react": "18",
+    "react-dom": "18",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
