--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.5.1",
     "antd": "^5.23.4",
+    "moment": "^2.30.1",
     "react": "18",
     "react-dom": "18",
     "react-redux": "^9.2.0",
